--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   appseed-app:
-    container_name: appseed_app
+    container_name: parkiot
     restart: always
     build: .
     networks:
