--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.9
 
 # set environment variables
-ENV PYTHONDONTWRITEBYTECODE 1
-ENV PYTHONUNBUFFERED 1
+# ENV PYTHONDONTWRITEBYTECODE 1
+# ENV PYTHONUNBUFFERED 1
 
 COPY requirements.txt .
 
@@ -10,13 +10,16 @@ COPY requirements.txt .
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY env.sample .env
+# COPY .env .env
 
 COPY . .
+
+EXPOSE 8000
 
 # running migrations
 RUN python manage.py makemigrations
 RUN python manage.py migrate
+# RUN gunicorn --worker-tmp-dir . core.wsgi
 
 # gunicorn
 CMD ["gunicorn", "--config", "gunicorn-cfg.py", "core.wsgi"]
