--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 REACT_APP_VERSION=v1.0.0
-GENERATE_SOURCEMAP=false
-BACKEND_SERVER=https://oyster-app-bdvft.ondigitalocean.app/parkiot-backend2
+# REACT_APP_API_BASE_URL=https://oyster-app-bdvft.ondigitalocean.app/parkiot-backend2
+REACT_APP_API_BASE_URL=http://127.0.0.1:8000
