--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,11 +32,12 @@
     "react-scripts": "^5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "serve": "^14.2.1",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "node sammy.js; serve -s _static -l tcp://0.0.0.0:$PORT -n",
+    "build": "rm -r _static 2>/dev/null; node sammy.js; react-scripts build && mv build _static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
