feat: Modulo de Olvide contraseña y validacion de cedula y placa

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,7 +36,7 @@
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "node sammy.js; serve -s _static -l tcp://0.0.0.0:$PORT -n",
+    "start": "react-scripts start",
     "build": "rm -r _static 2>/dev/null; node sammy.js; react-scripts build && mv build _static",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
