--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -27,6 +27,7 @@ requests==2.31.0
 requests-oauthlib==1.3.1
 scikit-learn==1.3.1
 scipy==1.11.2
+secure-smtplib==0.1.1
 six==1.16.0
 social-auth-core==4.4.2
 sqlparse==0.4.4
